# web-app

./: README.md
backend/: docker-compose.yml  pyproject.toml
backend/app/: auth.py  crud.py  database.py  main.py  models.py  oauth_google.py  schemas.py  security.py
backend/app/api/: routes.py
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx  providers.tsx
frontend/src/app/settings/delete/: page.tsx
frontend/src/app/task/: page.tsx
frontend/src/components/: PriorityFilter.tsx  TaskAdd.tsx  TaskCalenderMonth.tsx  TaskFusen.tsx  TasksTable.tsx  Topbar.tsx  UserMenuDrawer.tsx
frontend/src/lib/: api.ts  types.ts
